--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.002   2021-05-18  Released-By: PERLANCAR; Urgency: medium
+
+	- Use apply_roles() in generated sample code.
+
+
 0.001   2021-05-11  Released-By: PERLANCAR
 
         - First release.
